# odoo

./: .editorconfig  .gitignore  README.md  docker-compose.yml  pnpm-lock.yaml
backend/: .env.example  .gitignore  README.md  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml
backend/app/: crud.py  database.py  db.py  main.py  model.py  models.py  schemas.py
backend/app/core/: config.py  security.py
backend/app/routers/: answers.py  auth.py  questions.py  users.py
backend/config/: config.go
backend/database/: database.go
backend/handlers/: answer_handler.go  auth_handler.go  question_handler.go  user_handler.go
backend/middlewares/: auth.go
backend/models/: models.go
backend/schemas/: schemas.go
backend/services/: answer_service.go  auth_service.go  question_service.go  user_service.go
backend/utils/: jwt.go
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/ask/: page.tsx
frontend/components/: answer-card.tsx  auth-provider.tsx  header.tsx  login-dialog.tsx  notification-bell.tsx  notification-provider.tsx  question-card.tsx  question-list.tsx  register-dialog.tsx  rich-text-editor.tsx  search-bar.tsx  tag-filter.tsx  tag-input.tsx  user-menu.tsx  voting-buttons.tsx
frontend/hooks/: use-auth.ts
frontend/lib/: auth.ts
frontend/prisma/: schema.prisma
frontend/src/: App.css  App.tsx  index.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AnswerCard.tsx  Navbar.tsx  NotificationDropdown.tsx  QuestionCard.tsx  (+1 more)
src/: App.tsx
(+19 files in other folders)
